# python_learning

./: .gitignore  AlphaNotes.md  README.md  daily_pipeline.py  datawrite.py  git.md  ib_insync_test.py  ibtest.py  mytest.py  mytest_ib_insync.py  pyproject.toml  python_test.py  startup.py  testcommon.py  teststrategy.py
api/: timeprofile.py
backtest/: AIstrategy.py  __init__.py  annual_stock_analysis.py  bt_stockpick.py  minvolume.py  poetry.py  run.py  sectorpick.py  st_annualtop.py  st_boxtheory.py  st_breakout.py  st_level2_analysis.py  st_level2_derivemetrics.py  st_level2_sanitize.py  st_sectorresonance.py  stocklist.py  stocktest.py  tdxquant.py  tempCodeRunnerFile.py  trendup_model.py  vb_test.py
logs/: 20241027T111017.logtestcommon.txt  20241027T111123.logtestcommon.txt  20241027T111506.logtestcommon.txt  20241027T112043.logtestcommon.txt  20241027T112130.logtestcommon.txt  20241027T143931.logtestcommon.txt  20241027T181913.logtestcommon.txt  20241029T102252.logtestcommon.txt  20241029T102711.logtestcommon.txt  20241029T103646.logtestcommon.txt  20241029T103721.logtestcommon.txt  20241029T103742.logtestcommon.txt  20241029T103835.logtestcommon.txt  20241029T104006.logtestcommon.txt  20241029T104030.logtestcommon.txt  20241029T112417.logtestcommon.txt  20241029T113333.logtestcommon.txt  20241029T113747.logtestcommon.txt  20241029T113959.logtestcommon.txt  20241029T114108.logtestcommon.txt  20241029T114301.logtestcommon.txt  20241029T114951.logtestcommon.txt  20241029T115041.logtestcommon.txt  20241029T115236.logtestcommon.txt  20241029T115312.logtestcommon.txt  20241029T122329.logtestcommon.txt  20241029T122438.logtestcommon.txt  20241029T131211.logtestcommon.txt  20241029T131431.logtestcommon.txt  20241029T133039.logtestcommon.txt  20241029T133346.logtestcommon.txt  (+257 more)
tools/: download_tdx.py  (+1 more)
(+111 files in other folders)
