[project]
name = "python-learn"
version = "0.1.0"
description = "量化策略集合"
authors = [
    {name = "felinx99",email = "wangyu.hz@hotmail.com"}
]
license = {text = "GPL_3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "ta-lib (>=0.6.8,<0.7.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# 使用相对路径指向旁边的项目
backtrader = { path = "../backtrader", editable = true }
